--- a/admin/package.json
+++ b/admin/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "axios": "^0.20.0",
     "element-ui": "^2.13.2",
-    "moment": "^2.27.0",
+    "moment": "^2.28.0",
+    "qrcodejs2": "^0.0.2",
     "vue": "^2.5.2",
     "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.0.1"
