--- a/admin/package.json
+++ b/admin/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "echarts": "^4.9.0",
     "element-ui": "^2.13.2",
     "moment": "^2.28.0",
     "qrcodejs2": "^0.0.2",
+    "v-charts": "^1.19.0",
     "vue": "^2.5.2",
     "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.0.1"
